[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "adhd-core"
version = "0.1.0"
description = "Tree-of-thought cognitive architecture for autonomous agents"
authors = ["AI Architect <contact@example.com>"]
packagse = ["adhd"]

[tool.poetry.dependencies]
python = "^3.11"
claude = "^1.4.2"
pydantic = "^1.10.12"
pytest = "^7.2.2"
hypothesis = "^6.53.1"
